--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ apparent it by asking them. <a target="_blank" href="http://www.hostingbay.com.a
 												
 				</article>
 							<div id="pager"><span aria-current="page" class="page-numbers current">1</span>
-<a class="page-numbers" href="http://www.homehelper.pro/member/page/2/">2</a>
+<a class="page-numbers" href="page2.html">2</a>
 <a class="page-numbers" href="http://www.homehelper.pro/member/page/3/">3</a>
 <a class="page-numbers" href="http://www.homehelper.pro/member/page/4/">4</a>
 <a class="next page-numbers" href="http://www.homehelper.pro/member/page/2/">Next »</a></div>				
